--- a/EurekaMicroServiceSever/src/main/resources/application.properties
+++ b/EurekaMicroServiceSever/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.application.name=UserEurekaDiscoveryServeer
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+
+eureka.server.a-s-g-query-timeout-ms=1000
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=1572
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
