--- a/ZuluApiGateway/src/main/resources/application.properties
+++ b/ZuluApiGateway/src/main/resources/application.properties
@@ -6,3 +6,16 @@ server.port=8082
 spring.application.name=zulu
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
 
+ribbon.ReadTimeout=60000
+
+user.login.url = /users-ws/users/login
+user.register.url = /users-ws/users/
+users-ws.console = /users-ws/h2-console/**
+authorization.token.header.name = Authorization
+authorization.header.prefix = Bearer
+token.secret = wwerwe988sdfibiu
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=1572
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
