--- a/MicroUserService/src/main/resources/application.properties
+++ b/MicroUserService/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=sa
 
+gateway.ip=	192.168.43.98
+token.ExpMillis = 3600000
+token.secret = wwerwe988sdfibiu
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
