--- a/UserManagementService/src/main/resources/application.properties
+++ b/UserManagementService/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=sa
 
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
